added new frame

--- a/transferMatrix.tex
+++ b/transferMatrix.tex
@@ -72,5 +72,13 @@ Transmission Loss
   \end{align*}
 \end{frame}
 
+\begin{frame}
+\frametitle{\vspace{0.50cm}{\hspace{1.5cm}
+Transfer Matrix
+}}
+\framesubtitle{\hspace{1.55cm}
+Transmission Loss
+}
+\end{frame}
 
 \end{document}
